logo coeur mis en forme, trouver comment ajouter l'effet de transition

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
               /></a>
               <h3>La palette du goût</h3>
               <p>Ménilmontant</p>
-              <input type="checkbox" id="heart" />
-              <label for="heart"><i class="fa-solid fa-heart"></i></label>
+              <div class="love">
+                <input type="checkbox" id="heart" />
+                <label for="heart"><i class="fa-solid fa-heart"></i></label>
+              </div>
               <div class="new"></div>
             </div>
           </div>
