changement du footer sur les 4 pages

--- a/leDelice.html
+++ b/leDelice.html
@@ -131,16 +131,20 @@
     </div>
     <footer>
       <div class="link">
-        <div class="propose">
-          <i class="fa-solid fa-utensils"></i>
-          <p>proposer un restaurant</p>
-        </div>
-        <div class="partner">
-          <i class="fa-solid fa-handshake-angle"></i>
-          <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <ul>
+          <li>
+            <a href="#"
+              ><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a
+            >
+          </li>
+          <li>
+            <a class="partner" href="#"
+              ><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a
+            >
+          </li>
+          <li><a href="#">Mentions Légales</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
 
       <p id="font">ohmyfood</p>
