évenement au clic ajouter sur les menu, reste a ajouter l'effet valider

--- a/laNote.html
+++ b/laNote.html
@@ -34,106 +34,136 @@
       <div class="card-choice">
         <p class="plat">ENTREES</p>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Ravioles de foie gras</h3>
-            <p>Accompagnées de leur crème a la truffe</p>
-            <span>25€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="entree1" />
+          <label for="entree1">
+            <div class="card-menu">
+              <h3>Ravioles de foie gras</h3>
+              <p>Accompagnées de leur crème a la truffe</p>
+              <span>25€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Caviar osciètre</h3>
-            <p>Sur blini à la farine de blé noir</p>
-            <span>35€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="entree2" />
+          <label for="entree2">
+            <div class="card-menu">
+              <h3>Caviar osciètre</h3>
+              <p>Sur blini à la farine de blé noir</p>
+              <span>35€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Homard et espuma de potiron</h3>
-            <p>Marinés au zestes d'orange</p>
-            <span>20€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="entree3" />
+          <label for="entree3">
+            <div class="card-menu">
+              <h3>Homard et espuma de potiron</h3>
+              <p>Marinés au zestes d'orange</p>
+              <span>20€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Foie gras de canard cuit entier</h3>
-            <p>Confiture de figue et pain toasté</p>
-            <span>35€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="entree4" />
+          <label for="entree4">
+            <div class="card-menu">
+              <h3>Foie gras de canard cuit entier</h3>
+              <p>Confiture de figue et pain toasté</p>
+              <span>35€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <p class="plat">PLATS</p>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Noix de coquilles Saint-Jacques</h3>
-            <p>Sur lit de purée de céleri-rave</p>
-            <span>40€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="plat1" />
+          <label for="plat1">
+            <div class="card-menu">
+              <h3>Noix de coquilles Saint-Jacques</h3>
+              <p>Sur lit de purée de céleri-rave</p>
+              <span>40€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Langoustine poêlée</h3>
-            <p>Purée de patate douce</p>
-            <span>35€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="plat2" />
+          <label for="plat2">
+            <div class="card-menu">
+              <h3>Langoustine poêlée</h3>
+              <p>Purée de patate douce</p>
+              <span>35€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Mijoté de queue de boeuf</h3>
-            <p>Et riz sauvages aux zestes de citron</p>
-            <span>44€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="plat3" />
+          <label for="plat3">
+            <div class="card-menu">
+              <h3>Mijoté de queue de boeuf</h3>
+              <p>Et riz sauvages aux zestes de citron</p>
+              <span>44€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <p class="plat">DESSERTS</p>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Macatron noisette et chocolat</h3>
-            <p>Glace au caramel brun et sel de guérande</p>
-            <span>18€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="dessert1" />
+          <label for="dessert1">
+            <div class="card-menu">
+              <h3>Macatron noisette et chocolat</h3>
+              <p>Glace au caramel brun et sel de guérande</p>
+              <span>18€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Baba au rhum revisité</h3>
-            <p>Avec son coulis de citron</p>
-            <span>22€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="dessert2" />
+          <label for="dessert2">
+            <div class="card-menu">
+              <h3>Baba au rhum revisité</h3>
+              <p>Avec son coulis de citron</p>
+              <span>22€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Tarte au citron meringuée</h3>
-            <p>Destructurée</p>
-            <span>23€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="dessert3" />
+          <label for="dessert3">
+            <div class="card-menu">
+              <h3>Tarte au citron meringuée</h3>
+              <p>Destructurée</p>
+              <span>23€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <button>Commander</button>
       </div>
