--- a/laPalette.html
+++ b/laPalette.html
@@ -28,103 +28,134 @@
     <div class="card-menu1">
       <div class="card-menu1-head">
         <h2>La palette a du goût</h2>
-        <input type="checkbox" id="heart" />
-        <label for="heart"><i class="fa-solid fa-heart"></i></label>
+        <div class="love">
+          <input type="checkbox" id="heart" />
+          <label for="heart"><i class="fa-solid fa-heart"></i></label>
+        </div>
       </div>
       <div class="card-choice">
         <p class="plat">ENTREES</p>
+
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Fricassée d'escargots</h3>
-            <p>Au piment d'Espelette</p>
-            <span>25€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="entree1" />
+          <label for="entree1">
+            <div class="card-menu">
+              <h3>Fricassée d'escargots</h3>
+              <p>Au piment d'Espelette</p>
+
+              <span>25€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
+        </div>
+
+        <div class="card-menus">
+          <input type="checkbox" id="entree2" />
+          <label for="entree2">
+            <div class="card-menu">
+              <h3>Foie gras de canard mi-cuit</h3>
+              <p>Et ses copeaux de truffe noire</p>
+              <span>35€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <input type="checkbox" id="toggle1" />
-            <h3>Foie gras de canard mi-cuit</h3>
-            <p>Et ses copeaux de truffe noire</p>
-            <span>35€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
-        </div>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>Œuf au plat</h3>
-            <p>Assaisonné à la truffe sur lit de caviar</p>
-            <span>20€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="entree3" />
+          <label for="entree3">
+            <div class="card-menu">
+              <h3>Œuf au plat</h3>
+              <p>Assaisonné à la truffe sur lit de caviar</p>
+              <span>20€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <p class="plat">PLATS</p>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Filet de bœuf aux herbes</h3>
-            <p>Accompagné de sa ribambelle de légumes</p>
-            <span>40€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="plat1" />
+          <label for="plat1">
+            <div class="card-menu">
+              <h3>Filet de bœuf aux herbes</h3>
+              <p>Accompagné de sa ribambelle de légumes</p>
+              <span>40€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Parmentier de queue de boeuf</h3>
-            <p>A la truffe nour sur sa purée de panais</p>
-            <span>35€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="plat2" />
+          <label for="plat2">
+            <div class="card-menu">
+              <h3>Parmentier de queue de boeuf</h3>
+              <p>A la truffe nour sur sa purée de panais</p>
+              <span>35€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Filet de turbot</h3>
-            <p>Aux agrumes</p>
-            <span>44€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="plat3" />
+          <label for="plat3">
+            <div class="card-menu">
+              <h3>Filet de turbot</h3>
+              <p>Aux agrumes</p>
+              <span>44€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <p class="plat">DESSERTS</p>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Paris-Brest</h3>
-            <p>Revisité</p>
-            <span>18€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="dessert1" />
+          <label for="dessert1">
+            <div class="card-menu">
+              <h3>Paris-Brest</h3>
+              <p>Revisité</p>
+              <span>18€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>macaron au chocolat d'exception</h3>
-            <p>Et glace a la vanille de Madagascar</p>
-            <span>22€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="dessert2" />
+          <label for="dessert2">
+            <div class="card-menu">
+              <h3>macaron au chocolat d'exception</h3>
+              <p>Et glace a la vanille de Madagascar</p>
+              <span>22€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <div class="card-menus">
-          <div class="card-menu">
-            <h3>Mousse au chocolat</h3>
-            <p>Au piment d'Espelette et à la truffe noir</p>
-            <span>23€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+          <input type="checkbox" id="dessert3" />
+          <label for="dessert3">
+            <div class="card-menu">
+              <h3>Mousse au chocolat</h3>
+              <p>Au piment d'Espelette et à la truffe noir</p>
+              <span>23€</span>
+            </div>
+            <div id="valid">
+              <i class="fa-regular fa-circle-check"></i>
+            </div>
+          </label>
         </div>
         <button>Commander</button>
       </div>
