couleur de fond des coeur ok , ajout d'un effet de chargement sur la page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     />
   </head>
   <body>
+    <div class="loading">
+      <img
+        id="load"
+        src="./assets/img/logo/hamburger-removebg-preview.png"
+        alt="Hamburger"
+      />
+    </div>
     <header>
       <a href="./"
         ><img src="/assets/img/logo/ohmyfood.png " alt="Logo ohmyfood"
