Projet quasiment finalisé, a faire vérifier

--- a/leDelice.html
+++ b/leDelice.html
@@ -32,98 +32,131 @@
         <label for="heart3"><i class="fa-solid fa-heart"></i></label>
       </div>
       <div class="card-choice">
-        <p class="plat">ENTREES</p>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>Tartare de thon</h3>
-            <p>Assaisonné au yuzu</p>
-            <span>25€</span>
+        <div class="card-entree">
+          <p class="plat">ENTREES</p>
+          <div class="card-menus">
+            <input type="checkbox" id="entree1" />
+            <label for="entree1">
+              <div class="card-menu">
+                <h3>Tartare de thon</h3>
+                <p>Assaisonné au yuzu</p>
+                <span>25€</span>
+              </div>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
           </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
+          <div class="card-menus">
+            <input type="checkbox" id="entree2" />
+            <label for="entree2">
+              <div class="card-menu">
+                <h3>Bouché de homard croustillant</h3>
+                <p>Et sa farandole de petits légumes</p>
+                <span>35€</span>
+              </div>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
+          </div>
+          <div class="card-menus">
+            <input type="checkbox" id="entree3" />
+            <label for="entree3">
+              <div class="card-menu">
+                <h3>poulet rôti aux herbes de Provence</h3>
+                <p>Et sa crème de truffe</p>
+                <span>40€</span>
+              </div>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
           </div>
         </div>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>Bouché de homard croustillant</h3>
-            <p>Et sa farandole de petits légumes</p>
-            <span>35€</span>
+        <div class="card-plat">
+          <p class="plat">PLATS</p>
+          <div class="card-menus">
+            <input type="checkbox" id="plat1" />
+            <label for="plat1">
+              <div class="card-menu">
+                <h3>poulet rôti aux herbes de Provence</h3>
+                <p>Et sa crème de truffe</p>
+                <span>40€</span>
+              </div>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
           </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
+          <div class="card-menus">
+            <input type="checkbox" id="plat2" />
+            <label for="plat2">
+              <div class="card-menu">
+                <h3>Langouste rôtie</h3>
+                <p>Et ses légumes de saison</p>
+                <span>35€</span>
+              </div>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
           </div>
-        </div>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>poulet rôti aux herbes de Provence</h3>
-            <p>Et sa crème de truffe</p>
-            <span>40€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
-        </div>
+          <div class="card-menus">
+            <input type="checkbox" id="plat3" />
+            <label for="plat3">
+              <div class="card-menu">
+                <h3>Côte de boeuf Angus</h3>
+                <p>Et sa purée de panais</p>
+                <span>44€</span>
+              </div>
 
-        <p class="plat">PLATS</p>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>poulet rôti aux herbes de Provence</h3>
-            <p>Et sa crème de truffe</p>
-            <span>40€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
           </div>
         </div>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>Langouste rôtie</h3>
-            <p>Et ses légumes de saison</p>
-            <span>35€</span>
+        <div class="card-dessert">
+          <p class="plat">DESSERTS</p>
+          <div class="card-menus">
+            <input type="checkbox" id="dessert1" />
+            <label for="dessert1">
+              <div class="card-menu">
+                <h3>Oeuf au plat</h3>
+                <p>Assaisonné à la truffe sur lit de caviar</p>
+                <span>76€</span>
+              </div>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
           </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
+          <div class="card-menus">
+            <input type="checkbox" id="dessert2" />
+            <label for="dessert2">
+              <div class="card-menu">
+                <h3>Crème brulée</h3>
+                <p>Revisitée</p>
+                <span>22€</span>
+              </div>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
           </div>
-        </div>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>Côte de boeuf Angus</h3>
-            <p>Et sa purée de panais</p>
-            <span>44€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
-        </div>
-        <p class="plat">DESSERTS</p>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>Oeuf au plat</h3>
-            <p>Assaisonné à la truffe sur lit de caviar</p>
-            <span>76€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
-        </div>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>Crème brulée</h3>
-            <p>Revisitée</p>
-            <span>22€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
-        </div>
-        <div class="card-menus">
-          <div class="card-menu">
-            <h3>Tiramisu</h3>
-            <p>A la noisette</p>
-            <span>23€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
+          <div class="card-menus">
+            <input type="checkbox" id="dessert3" />
+            <label for="dessert3">
+              <div class="card-menu">
+                <h3>Tiramisu</h3>
+                <p>A la noisette</p>
+                <span>23€</span>
+              </div>
+              <div id="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </div>
+            </label>
           </div>
         </div>
         <button>Commander</button>
