--- a/laFrancaise.html
+++ b/laFrancaise.html
@@ -32,8 +32,11 @@
         <label for="heart2"><i class="fa-solid fa-heart"></i></label>
       </div>
       <div class="card-choice">
+        <div class="card-entree">
         <p class="plat">ENTREES</p>
         <div class="card-menus">
+          <input type="checkbox" id="entree1" />
+            <label for="entree1">
           <div class="card-menu">
             <h3>Tarte de poulpe acidulé</h3>
             <p>Aux zestes d'oranges</p>
@@ -42,8 +45,11 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+            </label>
         </div>
         <div class="card-menus">
+          <input type="checkbox" id="entree2" />
+            <label for="entree2">
           <div class="card-menu">
             <h3>Velouté de légumes d'antan</h3>
             <p>Carotte, panais, topinambour</p>
@@ -52,8 +58,11 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+            </label>
         </div>
         <div class="card-menus">
+          <input type="checkbox" id="entree3" />
+          <label for="entree3">
           <div class="card-menu">
             <h3>Soupe a l'oignon</h3>
             <p>Revisitée</p>
@@ -62,9 +71,14 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+          </label>
         </div>
+      </div>
+        <div class="card-plat">
         <p class="plat">PLATS</p>
         <div class="card-menus">
+          <input type="checkbox" id="plat1" />
+            <label for="plat1">
           <div class="card-menu">
             <h3>Coquilles Saint-Jacques</h3>
             <p>Accompagnées d'une puré de panais</p>
@@ -73,8 +87,11 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+            </label>
         </div>
         <div class="card-menus">
+          <input type="checkbox" id="plat2" />
+            <label for="plat2">
           <div class="card-menu">
             <h3>Magret de canard</h3>
             <p>Et parmentier de pommes de terre</p>
@@ -83,8 +100,11 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+            </label>
         </div>
         <div class="card-menus">
+          <input type="checkbox" id="plat3" />
+            <label for="plat3">
           <div class="card-menu">
             <h3>Pigeonneau d'Ille-et-Vilaine</h3>
             <p>Sur son lit de gnocchis aux légumes</p>
@@ -93,9 +113,13 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+            </label>
         </div>
+        <div class="card-dessert">
         <p class="plat">DESSERTS</p>
         <div class="card-menus">
+          <input type="checkbox" id="dessert1" />
+            <label for="dessert1">
           <div class="card-menu">
             <h3>Pétales de violettes glacés</h3>
             <p>Et purée de noisettes</p>
@@ -104,8 +128,11 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+            </label>
         </div>
         <div class="card-menus">
+          <input type="checkbox" id="dessert2" />
+            <label for="dessert2">
           <div class="card-menu">
             <h3>Fondant au chocolat</h3>
             <p>Revisité</p>
@@ -114,8 +141,11 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+            </label>
         </div>
         <div class="card-menus">
+          <input type="checkbox" id="dessert3" />
+            <label for="dessert3">
           <div class="card-menu">
             <h3>Millefeuille croustillant</h3>
             <p>Myrtilles et pâte d'amande</p>
@@ -124,7 +154,9 @@
           <div id="valid">
             <i class="fa-regular fa-circle-check"></i>
           </div>
+            </label>
         </div>
+      </div>
         <button>Commander</button>
       </div>
     </div>
