footer mis en forme en format tablette, texte couper en format mobile, ajout des liens e-mail

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             >
           </li>
           <li><a href="#">Mentions Légales</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="mailto:ohmyfood@gmail.fr">Contact</a></li>
         </ul>
       </div>
 
