--- a/laFrancaise.html
+++ b/laFrancaise.html
@@ -174,7 +174,7 @@
             >
           </li>
           <li><a href="#">Mentions Légales</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="mailto:ohmyfood@gmail.fr">Contact</a></li>
         </ul>
       </div>
 
