--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <header>
       <a href="./"
-        ><img src="/assets/img/logo/ohmyfood.png " alt="Logo ohmyfood"
+        ><img src="./assets/img/logo/ohmyfood.png " alt="Logo ohmyfood"
       /></a>
       <div class="location">
         <i class="fa-solid fa-location-dot"></i>
@@ -64,7 +64,7 @@
             <div class="card1" id="carte1">
               <a href="./laPalette.html"
                 ><img
-                  src="/assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  src="./assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                   alt="restaurant la palette de goût"
               /></a>
               <h3>La palette du goût</h3>
@@ -81,7 +81,7 @@
               <div class="image"></div>
               <a href="./laNote.html"
                 ><img
-                  src="/assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  src="./assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                   alt="La note enchantée"
               /></a>
               <h3>La note enchantée</h3>
@@ -94,9 +94,9 @@
           </div>
           <div class="card">
             <div class="card1">
-              <a href="/laFrancaise.html"
+              <a href="./laFrancaise.html"
                 ><img
-                  src="/assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  src="./assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                   alt="A la française"
                 />
               </a>
@@ -108,9 +108,9 @@
           </div>
           <div class="card">
             <div class="card1">
-              <a href="/leDelice.html"
+              <a href="./leDelice.html"
                 ><img
-                  src="/assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  src="./assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                   alt="Le délice des sens"
               /></a>
               <h3>Le délice des sens</h3>
