correction d'erreur mineur

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>
           Découvrez des restaurants d'excéption, séléctionnés par nos soins.
         </p>
-        <a href="#restaurant"><button>Explorer nos restaurants</button></a>
+        <a href="#restaurant" class="explore">Explorer nos restaurants</a>
       </div>
     </header>
     <main>
