--- a/laFrancaise.html
+++ b/laFrancaise.html
@@ -33,130 +33,141 @@
       </div>
       <div class="card-choice">
         <div class="card-entree">
-        <p class="plat">ENTREES</p>
-        <div class="card-menus">
-          <input type="checkbox" id="entree1" />
+          <p class="plat">ENTREES</p>
+          <div class="card-menus">
+            <input type="checkbox" id="entree1" />
             <label for="entree1">
-          <div class="card-menu">
-            <h3>Tarte de poulpe acidulé</h3>
-            <p>Aux zestes d'oranges</p>
-            <span>25€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+              <span class="card-menu">
+                <span class="sous-titre">Tarte de poulpe acidulé</span>
+                <span class="description-plat">Aux zestes d'oranges</span>
+                <span class="prix">25€</span>
+              </span>
+              <span class="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </span>
             </label>
-        </div>
-        <div class="card-menus">
-          <input type="checkbox" id="entree2" />
+          </div>
+          <div class="card-menus">
+            <input type="checkbox" id="entree2" />
             <label for="entree2">
-          <div class="card-menu">
-            <h3>Velouté de légumes d'antan</h3>
-            <p>Carotte, panais, topinambour</p>
-            <span>35€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+              <span class="card-menu">
+                <span class="sous-titre">Velouté de légumes d'antan</span>
+                <span class="description-plat"
+                  >Carotte, panais, topinambour</span
+                >
+                <span class="prix">35€</span>
+              </span>
+              <span class="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </span>
             </label>
-        </div>
-        <div class="card-menus">
-          <input type="checkbox" id="entree3" />
-          <label for="entree3">
-          <div class="card-menu">
-            <h3>Soupe a l'oignon</h3>
-            <p>Revisitée</p>
-            <span>40€</span>
           </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
+          <div class="card-menus">
+            <input type="checkbox" id="entree3" />
+            <label for="entree3">
+              <span class="card-menu">
+                <span class="sous-titre">Soupe a l'oignon</span>
+                <span class="description-plat">Revisitée</span>
+                <span class="prix">40€</span>
+              </span>
+              <span class="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </span>
+            </label>
           </div>
-          </label>
         </div>
-      </div>
         <div class="card-plat">
-        <p class="plat">PLATS</p>
-        <div class="card-menus">
-          <input type="checkbox" id="plat1" />
+          <p class="plat">PLATS</p>
+          <div class="card-menus">
+            <input type="checkbox" id="plat1" />
             <label for="plat1">
-          <div class="card-menu">
-            <h3>Coquilles Saint-Jacques</h3>
-            <p>Accompagnées d'une puré de panais</p>
-            <span>40€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+              <span class="card-menu">
+                <span class="sous-titre">Coquilles Saint-Jacques</span>
+                <span class="description-plat"
+                  >Accompagnées d'une puré de panais</span
+                >
+                <span class="prix">40€</span>
+              </span>
+              <span class="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </span>
             </label>
-        </div>
-        <div class="card-menus">
-          <input type="checkbox" id="plat2" />
+          </div>
+          <div class="card-menus">
+            <input type="checkbox" id="plat2" />
             <label for="plat2">
-          <div class="card-menu">
-            <h3>Magret de canard</h3>
-            <p>Et parmentier de pommes de terre</p>
-            <span>35€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+              <span class="card-menu">
+                <span class="sous-titre">Magret de canard </span>
+                <span class="description-plat"
+                  >Et parmentier de pommes de terre</span
+                >
+                <span class="prix">35€</span>
+              </span>
+              <span class="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </span>
             </label>
-        </div>
-        <div class="card-menus">
-          <input type="checkbox" id="plat3" />
+          </div>
+          <div class="card-menus">
+            <input type="checkbox" id="plat3" />
             <label for="plat3">
-          <div class="card-menu">
-            <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-            <p>Sur son lit de gnocchis aux légumes</p>
-            <span>44€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
+              <span class="card-menu">
+                <span class="sous-titre">Pigeonneau d'Ille-et-Vilaine</span>
+                <span class="description-plat"
+                  >Sur son lit de gnocchis aux légumes</span
+                >
+                <span class="prix">44€</span>
+              </span>
+              <span class="valid">
+                <i class="fa-regular fa-circle-check"></i>
+              </span>
             </label>
+          </div>
+          <div class="card-dessert">
+            <p class="plat">DESSERTS</p>
+            <div class="card-menus">
+              <input type="checkbox" id="dessert1" />
+              <label for="dessert1">
+                <span class="card-menu">
+                  <span class="sous-titre">Pétales de violettes glacés</span>
+                  <span class="description-plat">Et purée de noisettes</span>
+                  <span class="prix">18€</span>
+                </span>
+                <span class="valid">
+                  <i class="fa-regular fa-circle-check"></i>
+                </span>
+              </label>
+            </div>
+            <div class="card-menus">
+              <input type="checkbox" id="dessert2" />
+              <label for="dessert2">
+                <span class="card-menu">
+                  <span class="sous-titre">Fondant au chocolat</span>
+                  <span class="description-plat">Revisité</span>
+                  <span class="prix">22€</span>
+                </span>
+                <span class="valid">
+                  <i class="fa-regular fa-circle-check"></i>
+                </span>
+              </label>
+            </div>
+            <div class="card-menus">
+              <input type="checkbox" id="dessert3" />
+              <label for="dessert3">
+                <span class="card-menu">
+                  <span class="sous-titre">Millefeuille croustillant</span>
+                  <span class="description-plat"
+                    >Myrtilles et pâte d'amande</span
+                  >
+                  <span class="prix">23€</span>
+                </span>
+                <span class="valid">
+                  <i class="fa-regular fa-circle-check"></i>
+                </span>
+              </label>
+            </div>
+          </div>
         </div>
-        <div class="card-dessert">
-        <p class="plat">DESSERTS</p>
-        <div class="card-menus">
-          <input type="checkbox" id="dessert1" />
-            <label for="dessert1">
-          <div class="card-menu">
-            <h3>Pétales de violettes glacés</h3>
-            <p>Et purée de noisettes</p>
-            <span>18€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
-            </label>
-        </div>
-        <div class="card-menus">
-          <input type="checkbox" id="dessert2" />
-            <label for="dessert2">
-          <div class="card-menu">
-            <h3>Fondant au chocolat</h3>
-            <p>Revisité</p>
-            <span>22€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
-            </label>
-        </div>
-        <div class="card-menus">
-          <input type="checkbox" id="dessert3" />
-            <label for="dessert3">
-          <div class="card-menu">
-            <h3>Millefeuille croustillant</h3>
-            <p>Myrtilles et pâte d'amande</p>
-            <span>23€</span>
-          </div>
-          <div id="valid">
-            <i class="fa-regular fa-circle-check"></i>
-          </div>
-            </label>
-        </div>
-      </div>
         <button>Commander</button>
       </div>
     </div>
