--- a/laPalette.html
+++ b/laPalette.html
@@ -40,43 +40,47 @@
           <div class="card-menus">
             <input type="checkbox" id="entree1" />
             <label for="entree1">
-              <div class="card-menu">
-                <h3>Fricassée d'escargots</h3>
-                <p>Au piment d'Espelette</p>
+              <span class="card-menu">
+                <span class="sous-titre">Fricassée d'escargots</span>
+                <span class="description-plat">Au piment d'Espelette</span>
+                <span class="prix">25€</span>
+              </span>
 
-                <span>25€</span>
-              </div>
-
-              <div id="valid">
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
 
           <div class="card-menus">
             <input type="checkbox" id="entree2" />
             <label for="entree2">
-              <div class="card-menu">
-                <h3>Foie gras de canard mi-cuit</h3>
-                <p>Et ses copeaux de truffe noire</p>
-                <span>35€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Foie gras de canard mi-cuit</span>
+                <span class="description-plat">
+                  Et ses copeaux de truffe noire</span
+                >
+
+                <span class="prix">35€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="entree3" />
             <label for="entree3">
-              <div class="card-menu">
-                <h3>Œuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de caviar</p>
-                <span>20€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Œuf au plat</span>
+                <span class="description-plat"
+                  >Assaisonné à la truffe sur lit de caviar</span
+                >
+                <span class="prix">20€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
         </div>
@@ -86,40 +90,44 @@
           <div class="card-menus">
             <input type="checkbox" id="plat1" />
             <label for="plat1">
-              <div class="card-menu">
-                <h3>Filet de bœuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes</p>
-                <span>40€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Filet de bœuf aux herbes</span>
+                <span class="description-plat"
+                  >Accompagné de sa ribambelle de légumes</span
+                >
+                <span class="prix">40€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="plat2" />
             <label for="plat2">
-              <div class="card-menu">
-                <h3>Parmentier de queue de boeuf</h3>
-                <p>A la truffe nour sur sa purée de panais</p>
-                <span>35€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Parmentier de queue de boeuf</span>
+                <span class="description-plat">
+                  A la truffe nour sur sa purée de panais</span
+                >
+                <span class="prix">35€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="plat3" />
             <label for="plat3">
-              <div class="card-menu">
-                <h3>Filet de turbot</h3>
-                <p>Aux agrumes</p>
-                <span>44€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Filet de turbot</span>
+                <span class="description-plat"> Aux agrumes </span>
+                <span class="prix">44€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
         </div>
@@ -128,40 +136,44 @@
           <div class="card-menus">
             <input type="checkbox" id="dessert1" />
             <label for="dessert1">
-              <div class="card-menu">
-                <h3>Paris-Brest</h3>
-                <p>Revisité</p>
-                <span>18€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Paris-Brest</span>
+                <span class="description-plat">Revisité</span>
+                <span class="prix">18€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="dessert2" />
             <label for="dessert2">
-              <div class="card-menu">
-                <h3>macaron au chocolat d'exception</h3>
-                <p>Et glace a la vanille de Madagascar</p>
-                <span>22€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">macaron au chocolat d'exception</span>
+                <span class="description-plat"
+                  >Et glace a la vanille de Madagascar</span
+                >
+                <span class="prix">22€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="dessert3" />
             <label for="dessert3">
-              <div class="card-menu">
-                <h3>Mousse au chocolat</h3>
-                <p>Au piment d'Espelette et à la truffe noir</p>
-                <span>23€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Mousse au chocolat</span>
+                <span class="description-plat"
+                  >Au piment d'Espelette et à la truffe noir</span
+                >
+                <span class="prix">23€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
         </div>
