--- a/leDelice.html
+++ b/leDelice.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Le délice des sens</title>
-    <link rel="stylesheet" href="/assets/styles/index.css" />
+    <link rel="stylesheet" href="./assets/styles/index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -37,40 +37,44 @@
           <div class="card-menus">
             <input type="checkbox" id="entree1" />
             <label for="entree1">
-              <div class="card-menu">
-                <h3>Tartare de thon</h3>
-                <p>Assaisonné au yuzu</p>
-                <span>25€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Tartare de thon</span>
+                <span class="description-plat">Assaisonné au yuzu</span>
+                <span class="prix">25€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="entree2" />
             <label for="entree2">
-              <div class="card-menu">
-                <h3>Bouché de homard croustillant</h3>
-                <p>Et sa farandole de petits légumes</p>
-                <span>35€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Bouché de homard croustillant</span>
+                <span class="description-plat"
+                  >Et sa farandole de petits légumes</span
+                >
+                <span class="prix">35€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="entree3" />
             <label for="entree3">
-              <div class="card-menu">
-                <h3>poulet rôti aux herbes de Provence</h3>
-                <p>Et sa crème de truffe</p>
-                <span>40€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre"
+                  >poulet rôti aux herbes de Provence</span
+                >
+                <span class="description-plat">Et sa crème de truffe</span>
+                <span class="prix">40€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
         </div>
@@ -79,41 +83,43 @@
           <div class="card-menus">
             <input type="checkbox" id="plat1" />
             <label for="plat1">
-              <div class="card-menu">
-                <h3>poulet rôti aux herbes de Provence</h3>
-                <p>Et sa crème de truffe</p>
-                <span>40€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre"
+                  >poulet rôti aux herbes de Provence</span
+                >
+                <span class="description-plat">Et sa crème de truffe</span>
+                <span class="prix">40€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="plat2" />
             <label for="plat2">
-              <div class="card-menu">
-                <h3>Langouste rôtie</h3>
-                <p>Et ses légumes de saison</p>
-                <span>35€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Langouste rôtie</span>
+                <span class="description-plat">Et ses légumes de saison</span>
+                <span class="prix">35€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="plat3" />
             <label for="plat3">
-              <div class="card-menu">
-                <h3>Côte de boeuf Angus</h3>
-                <p>Et sa purée de panais</p>
-                <span>44€</span>
-              </div>
+              <span class="card-menu">
+                <span class="sous-titre">Côte de boeuf Angus</span>
+                <span class="description-plat">Et sa purée de panais</span>
+                <span class="prix">44€</span>
+              </span>
 
-              <div id="valid">
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
         </div>
@@ -122,40 +128,42 @@
           <div class="card-menus">
             <input type="checkbox" id="dessert1" />
             <label for="dessert1">
-              <div class="card-menu">
-                <h3>Oeuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de caviar</p>
-                <span>76€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Oeuf au plat</span>
+                <span class="description-plat"
+                  >Assaisonné à la truffe sur lit de caviar</span
+                >
+                <span class="prix">76€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="dessert2" />
             <label for="dessert2">
-              <div class="card-menu">
-                <h3>Crème brulée</h3>
-                <p>Revisitée</p>
-                <span>22€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Crème brulée</span>
+                <span class="description-plat">Revisitée</span>
+                <span class="prix">22€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
           <div class="card-menus">
             <input type="checkbox" id="dessert3" />
             <label for="dessert3">
-              <div class="card-menu">
-                <h3>Tiramisu</h3>
-                <p>A la noisette</p>
-                <span>23€</span>
-              </div>
-              <div id="valid">
+              <span class="card-menu">
+                <span class="sous-titre">Tiramisu</span>
+                <span class="description-plat">A la noisette</span>
+                <span class="prix">23€</span>
+              </span>
+              <span class="valid">
                 <i class="fa-regular fa-circle-check"></i>
-              </div>
+              </span>
             </label>
           </div>
         </div>
